aas82 cleanup git pre commit hook